--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ body {
     text-align: center;
     background: linear-gradient(90deg, #77080c, #031363);
     margin: 0;
-    padding: 0;
+    padding: 5px;
 }
 h2 {
     font-size: 2.8rem;
